slightly improved settings page

--- a/web_settings/glomekey.html
+++ b/web_settings/glomekey.html
@@ -10,19 +10,26 @@
   </head>
   <body>
     <div class="wrapper">
-      <label class="item">Glome API Server
-      <input class="text" name="server" type="input" placeholder="https://api.glome.me">
+      <img src="images/banner.png" alt="glome key banner"/>
+    </div>
+    <div class="wrapper details">
+      <h4>Glome API Settings</h4>
+      <label class="item">
+        <div>Server</div>
+        <input class="text" name="server" type="input" placeholder="https://api.glome.me">
       </label>
-      <label class="item">API Key
-      <input class="text" name="apikey" type="input" placeholder="Your Glome API key">
+      <label class="item">
+        <div>API Key</div>
+        <input class="text" name="apikey" type="input" placeholder="API key">
       </label>
-      <label class="item">API UID
-      <input class="text" name="uid" type="input" placeholder="Your Glome API uid">
+      <label class="item">
+        <div>API UID</div>
+        <input class="text" name="uid" type="input" placeholder="API uid">
       </label>
     </div>
 
     <div class="wrapper">
-      <input id="done" type="button" value="Done">
+      <input id="done" type="button" value="Save">
     </div>
   </body>
 </html>
